funktionalitet att välja värd/gäst för en användare och möjlighet att skicka en förfrågan till de medlemmar som bockat i att dom är värdar. Om oss sida med meddelande funktionalitet tillagd (i admin, Lägg till Om oss, about-us)

--- a/app/assets/stylesheets/main.less
+++ b/app/assets/stylesheets/main.less
@@ -405,6 +405,37 @@ input[type="reset"]:hover
   color:@host-level-04-color;
   background-position: -192px 0px;
 }
+.btn-host-popover {
+   margin-left:10px;
+ }
+.host-popover h3 {
+  margin-top:0px;
+  font-weight: bold;
+}
+.host-popover .rating-label {
+  line-height: 3.2em;
+  display: inline-block;
+  margin-right:10px;
+}
+.host-popover textarea {
+  width:100%;
+}
+.host-popover .rated-before-date {
+  font-size:11px;
+}
+.host-popover dl {
+  margin-top:20px;
+  margin-bottom:0px;
+}
+.btn-host-popover span.glyphicon-chevron-down {
+  display: none;
+}
+.btn-host-popover.collapsed span.glyphicon-chevron-up {
+  display: none;
+}
+.btn-host-popover.collapsed span.glyphicon-chevron-down {
+  display: inline-block;
+}
 .hdc-grade .rating-xxs
 {
   vertical-align: text-bottom;
@@ -1472,11 +1503,28 @@ h3.aside-title {
   opacity: 0.5;
 }
 
+.borderless td {
+  border: none;
+}
+
+.col50 {
+  width: 50px;
+}
 
 
 
-
-
+a.morelink {
+  text-decoration:none;
+  outline: none;
+}
+.morecontent span {
+  display: none;
+}
+.comment {
+  width: 600px;
+//  background-color: #f0f0f0;
+  margin: 10px;
+}
 
 
 
